--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ant-design-vue": "^2.2.8",
     "axios": "^0.24.0",
     "vue": "^3.2.25",
+    "vue-i18n": "^9.2.0-beta.25",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
   },
